welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: ';' expected but 'else' found.
    	}else{
         ^Array1:24: error: Unmatched closing brace '}' ignored here
}
^